# union_square

./: .coderabbit.yaml  .dockerignore  .gitignore  .log4brains.yml  .mergify.yml  .pre-commit-config.yaml  .zizmor.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVENTCORE_EXAMPLES.md  EVENTCORE_LIMITATIONS.md  EXPERT_REVIEW.md  EXPERT_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md  Justfile  PRD.md  README.md  RTK.md  SAFE_RING_BUFFER_ANALYSIS.md  WORK.md  compose.yaml  deny.toml  dhat-heap.json  flake.nix  lefthook.yml  opencode.jsonc  package-lock.json  package.json  rust-toolchain.toml  sgconfig.yml
.cargo/: audit.toml
.claude/agents/: async-rust-expert.md  continuous-delivery-architect.md  engineering-effectiveness-expert.md  event-modeling-expert.md  event-sourcing-architect.md  event-sourcing-test-architect.md  functional-architecture-expert.md  git-workflow-architect.md  product-discovery-coach.md  refactoring-patterns-architect.md  rust-type-safety-architect.md  rust-type-system-expert.md  tdd-coach.md  type-driven-development-expert.md  type-theory-reviewer.md  ux-research-expert.md
.codex/: config.toml
.codex/agents/: async_rust_expert.md  design_reviewer.md  event_sourcing_architect.md  pr_feedback_processor.md  security_reviewer.md  tdd_coach.md  type_theory_reviewer.md
.codex/hooks/: pre-tool-use.sh  stop.sh  test-hooks.sh  test-safety.sh  user-prompt-submit.sh
.codex/rules/: default.rules
.codex/specs/: README.md  issue-182.yaml  issue-183.yaml  issue-188.yaml  issue-226.yaml  issue-228.yaml  issue-233.yaml
.codex/test-lists/: issue-182.md  issue-183.md  issue-188.md  issue-226.md
.forgejo/workflows/: binary-release.yml  ci.yml
.githooks/: prepare-commit-msg
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: binary-release.yml  ci.yml  codeql-analysis.yml  deploy-gh-pages.yml  performance.yml  release-plz.yml  trunk-submit.yml
.opencode/: opencode.jsonc  package.json
.opencode/accepted-replay/: README.md
.opencode/agents/: async-rust-expert.md  continuous-delivery-architect.md  design-reviewer.md  engineering-effectiveness-expert.md  event-modeling-expert.md  event-sourcing-architect.md  event-sourcing-test-architect.md  functional-architecture-expert.md  git-workflow-architect.md  pr-feedback-processor.md  product-discovery-coach.md  refactoring-patterns-architect.md  rust-type-safety-architect.md  rust-type-system-expert.md  security-reviewer.md  tdd-coach.md  type-driven-development-expert.md  type-theory-reviewer.md  ux-research-expert.md
.opencode/commands/: adr.md  commit.md  review.md  test.md
.opencode/plugins/: ast-grep-on-edit.ts  cargo-check-on-edit.ts  conventional-commit-guard.ts  env-protection.ts  main-branch-protection.ts  no-verify-blocker.ts  todo-structure-validator.ts  workflow-injector.ts
.opencode/rules/: acceptance-test-boundaries.md  acceptance-test-reachability.md  adrs.md  cargo-dependencies.md  ci-flake-defined-invocations.md  consult-architecture-doc.md  cqrs-model-separation.md  effect-step-trampoline.md  enforcement-claim-language.md  event-model-readiness.md  eventcore-command-pattern.md  github-actions-security.md  incremental-event-fields.md  no-hardcoded-paths.md  performance-islands.md  prefer-borrows.md  review-feedback-protocol.md  tdd-process.md  test-coverage-nutype-validators.md  workspace-deps-consistency.md
adr/: 0001-overall-architecture-pattern.md  0002-storage-solution.md  0003-proxy-implementation-strategy.md  0004-type-system-and-domain-modeling.md  0005-testing-strategy.md  0006-authentication-and-authorization.md  0007-eventcore-as-central-audit-mechanism.md  0008-dual-path-architecture.md  0009-ring-buffer-pattern.md  0010-tiered-projection-strategy.md  0011-provider-abstraction-and-routing.md  0012-session-identification-and-metadata.md  0013-test-execution-architecture.md  0014-privacy-and-compliance-architecture.md  0015-caching-strategy.md  0016-performance-monitoring-and-metrics.md  0017-chunked-payload-support-for-ring-buffer.md  0018-unsafe-ring-buffer-implementation.md  0019-money-representation-strategy.md  0019-unsafe-ring-buffer-implementation.md  0020-authentication-pass-through-design.md  0021-unified-audit-command-architecture.md  0022-type-safe-request-lifecycle-state-machine.md  0023-error-events-as-audit-trail.md  0024-llm-request-parsing-strategy.md  0025-eventcore-projection-implementation.md  index.md  template.md
benches/: README.md  memory_profiling.rs  proxy_performance.rs  ring_buffer_comparison.rs
docs/: RELEASING.md  TDD_ADOPTION_PLAN.md  TDD_CHECKLIST.md  TDD_WORKFLOW.md  codex-command-surface.md  codex-migration.md  eventcore-patterns.md  index.html  projection-architecture.md  projection-refactoring-attempt.md  provider-integration.md  stream-centric-design-guide.md  stream-lifecycle-patterns.md  tdd-workflow.md
docs/accepted-replay/: README.md
docs/adr/: 0001-performance-safe-functional-core-architecture.md  0002-storage-solution.md  0003-proxy-implementation-strategy.md  0019-unsafe-ring-buffer-implementation.md  index.md  template.md
docs/architecture/: ARCHITECTURE.md
docs/guardrails/: README.md  consult-architecture-doc.md  effect-step-trampoline.md  enforcement-claim-language.md  event-model-readiness.md  functional-core-boundaries.md  git-merge-not-rebase.md  incremental-event-fields.md  io-boundary-dtos.md  no-panics-in-production.md  no-verify-commits.md  outside-in-tdd-execution.md  performance-islands.md  pr-scope-hygiene.md  refactor-sequencing.md  review-feedback-protocol.md  tdd-plan-structure.md  tdd-process.md  (+2 more)
examples/: multi_stream_queries.rs  projection_concept.rs
scripts/: setup-tdd-hooks.sh  submit-to-trunk-merge-queue.sh  test-release-build.sh
src/: application.rs  benchmark_types.rs  config.rs  error.rs  lib.rs  main.rs
tests/: application_trampoline.rs  bedrock_integration.rs  benchmark_validation.rs  ci_contract.rs  load_testing.rs  performance_baseline_contract.rs  stream_naming_tests.rs
tools/: check-legacy-harness.sh  check-merge-conflict-markers.sh
(+197 files in other folders)
