[package]
name = "union_square"
version = "0.1.2"
edition = "2021"
authors = ["John Wilger <john@johnwilger.com>"]
description = "A proxy/wire-tap service for making LLM calls and recording everything that happens in a session for later analysis and test-case extraction"
license = "MIT"
repository = "https://github.com/jwilger/union_square"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# EventCore will be used for event sourcing and CQRS patterns
eventcore = "0.1.8"
eventcore-postgres = "0.1.8"
eventcore-macros = "0.1.8"
nutype = { version = "0.6", features = ["serde", "regex"] }
derive_more = { version = "2.0", features = ["debug", "display", "from", "into"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
config = "0.14"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id", "propagate-header", "timeout", "limit", "normalize-path"] }
hyper = "1.6.0"
hyper-util = { version = "0.1.16", features = ["client", "client-legacy"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.10.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
crossbeam = "0.8.4"
parking_lot = "0.12.4"
urlencoding = "2.1.3"
aws-config = "1.8.3"
aws-sdk-bedrockruntime = "1.99.0"
regex = "1.11.1"
base64 = "0.22.1"
rust_decimal = "1.37.2"
currencies = { version = "0.4.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
rstest = "0.25"
proptest = "1.4"
eventcore-memory = "0.1.8"
criterion = { version = "0.6", features = ["async_tokio"] }
mockito = "1.6"
dhat = "0.3.3"


[[bin]]
name = "union_square"
path = "src/main.rs"

[lib]
name = "union_square"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true

[[bench]]
name = "proxy_performance"
harness = false

[[bench]]
name = "memory_profiling"
harness = false
