[package]
name = "union_square"
version = "0.2.0"
edition = "2021"
authors = ["John Wilger <john@johnwilger.com>"]
description = "A proxy/wire-tap service for making LLM calls and recording everything that happens in a session for later analysis and test-case extraction"
license = "MIT"
repository = "https://github.com/jwilger/union_square"
readme = "README.md"
keywords = ["llm", "proxy", "event-sourcing", "cqrs"]
categories = ["network-programming", "development-tools"]

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# We explicitly enable all cargo lints EXCEPT multiple_crate_versions.
# eventcore 0.7 → rand → getrandom pulls both wasip2 → wit-bindgen 0.57
# and wasip3 → wit-bindgen 0.51 on their respective WASI preview targets.
# Neither actually links on x86_64-linux, but cargo still counts them for
# the lint. Union Square binaries are native, not WASM.
cargo_common_metadata = { level = "deny", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 0 }
negative_feature_names = { level = "deny", priority = 0 }
redundant_feature_names = { level = "deny", priority = 0 }

[dependencies]
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.23", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# EventCore will be used for event sourcing and CQRS patterns
eventcore = "0.7.1"
eventcore-types = "0.7.1"
eventcore-postgres = "0.7.1"
eventcore-macros = "0.7.1"
nutype = { version = "0.6", features = ["serde", "regex"] }
derive_more = { version = "2.1", features = ["debug", "display", "from", "into"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
config = "0.15"
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "request-id", "propagate-header", "timeout", "limit", "normalize-path"] }
hyper = "1.9.0"
hyper-util = { version = "0.1.20", features = ["client", "client-legacy"] }
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.11"
futures-core = "0.3.32"
futures-util = "0.3.32"
pin-project-lite = "0.2.17"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
urlencoding = "2.1.3"
aws-config = "1.8.16"
aws-sdk-bedrockruntime = "1.130.0"
regex = "1.12"
base64 = "0.22"
rust_decimal = "1.41"
currencies = { version = "0.4.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27"
rstest = "0.26"
proptest = "1.11"
eventcore-memory = "0.8.0"
criterion = { version = "0.8", features = ["async_tokio"] }
mockito = "1.7"
dhat = "0.3"
quickcheck = "1.1"
quickcheck_macros = "1.2"


[[bin]]
name = "union_square"
path = "src/main.rs"

[lib]
name = "union_square"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true

[[bench]]
name = "proxy_performance"
harness = false

[[bench]]
name = "memory_profiling"
harness = false
